--- a/DragAndDropAcrossApps/gradle/wrapper/gradle-wrapper.properties
+++ b/DragAndDropAcrossApps/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Mon Oct 23 03:34:22 EDT 2023
+#Thu Nov  9 03:49:44 EST 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
