--- a/Notifications/gradle/wrapper/gradle-wrapper.properties
+++ b/Notifications/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Mon 23 Oct 2023 05:23:16 AM EDT
+#Thu 09 Nov 2023 05:29:54 AM EST
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
