--- a/SliceViewerKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/SliceViewerKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Mon 23 Oct 2023 05:54:49 AM EDT
+#Thu 09 Nov 2023 05:55:37 AM EST
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-all.zip
