--- a/PreferencesKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/PreferencesKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Thu 09 Nov 2023 05:46:50 AM EST
+#Mon Nov 27 03:40:28 EST 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
