--- a/ElevationBasic/gradle/wrapper/gradle-wrapper.properties
+++ b/ElevationBasic/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Sun Nov 26 04:26:33 EST 2023
+#Tue 12 Dec 2023 06:45:16 AM EST
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.2-all.zip
