--- a/ElevationBasic/gradle/wrapper/gradle-wrapper.properties
+++ b/ElevationBasic/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Tue 12 Dec 2023 06:45:16 AM EST
+#Thu Dec 28 03:57:07 EST 2023
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
