--- a/ImmersiveMode/gradle/wrapper/gradle-wrapper.properties
+++ b/ImmersiveMode/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Thu Dec 28 04:25:09 EST 2023
+#Fri 12 Jan 2024 05:32:16 AM EST
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
