--- a/DarkTheme/gradle/wrapper/gradle-wrapper.properties
+++ b/DarkTheme/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri Jan 26 03:43:19 EST 2024
+#Fri 09 Feb 2024 06:52:02 AM EST
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
