--- a/EmojiCompatKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/EmojiCompatKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri 26 Jan 2024 05:31:14 AM EST
+#Sat Feb 10 04:06:09 EST 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
