--- a/SliceViewerKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/SliceViewerKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sat Jan 27 04:15:52 EST 2024
+#Sat 10 Feb 2024 06:04:17 AM EST
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.2-all.zip
