--- a/AppWidget/gradle/wrapper/gradle-wrapper.properties
+++ b/AppWidget/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri 09 Feb 2024 06:20:43 AM EST
+#Fri Feb 23 04:29:09 EST 2024
 distributionBase=GRADLE_USER_HOME
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.2-all.zip
 distributionPath=wrapper/dists
