--- a/EmojiCompatKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/EmojiCompatKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sat Feb 10 04:06:09 EST 2024
+#Fri 23 Feb 2024 06:53:21 AM EST
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
