--- a/WindowInsetsAnimation/gradle/wrapper/gradle-wrapper.properties
+++ b/WindowInsetsAnimation/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun Feb 11 04:07:51 EST 2024
+#Sat 24 Feb 2024 05:20:07 AM EST
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.2-all.zip
