--- a/TextLinkify/gradle/wrapper/gradle-wrapper.properties
+++ b/TextLinkify/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Sat Feb 24 04:17:00 EST 2024
+#Sun 10 Mar 2024 07:10:23 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.2-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.4-all.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
