--- a/AndroidOnChromeOSDragAndDropDemo/gradle/wrapper/gradle-wrapper.properties
+++ b/AndroidOnChromeOSDragAndDropDemo/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sat Mar  9 03:26:30 EST 2024
+#Sat 23 Mar 2024 05:13:10 AM EDT
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
