--- a/DownloadableFonts/gradle/wrapper/gradle-wrapper.properties
+++ b/DownloadableFonts/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sat 09 Mar 2024 05:33:42 AM EST
+#Sun Mar 24 03:32:25 EDT 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
